# lab03

./: LICENSE  README.md
homework/: NO_YOU.txt  changes.txt  fixes.txt  main.cpp  main.txt  main_bin
libmatter/formatter_ex_lib/: CMakeLists.txt
libmatter/formatter_lib/: CMakeLists.txt
libmatter/hw/: CMakeLists.txt
libmatter/hw/formatter_ex_lib/: CMakeLists.txt
libmatter/hw/supertest/: CMakeLists.txt  hw.cpp
libmatter/solvr/: CMakeLists.txt  equation.cpp
